--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,8 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'  // 적절한 버전으로 설정
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	implementation 'javax.servlet:jstl:1.2'
