--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,14 @@ spring.h2.console.settings.web-allow-others=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:rss
-spring.datasource.username=sa
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
+spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/XE
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.username=lotto
+spring.datasource.password=lottoPass
+
+mybatis.mapper-locations=classpath:mappers/*.xml
+mybatis.config-location=classpath:mybatis-config.xml
+
 
 spring.mvc.view.prefix: /WEB-INF/views/
 spring.mvc.view.suffix: .jsp
@@ -20,3 +23,4 @@ server.servlet.jsp.init-parameters.development=true
 
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
+
